--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         els.searchResultBd.html(labels.join(''));
         els.searchResult.find('[data-toggle="tooltip"]').tooltip();
       }else{
-        els.searchResultBd.html('Codelf found nothing :(');
+        els.searchResultBd.html('Codelf found nothing, see "History & Suggestion" :)');
       }
       renderTitle();
     }
