added -webkit-font-smoothing: antialiased;

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="resources/css/bootstrap.min.css">
   <style>
+    body{
+      -webkit-font-smoothing: antialiased;
+    }
     .main-container{
       padding: 20px 40px;
     }
