--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Codelf</title>
-  <meta name="description" content="Search over projects from Github, Bitbucket, Google Code, Codeplex, Sourceforge, Fedora Projec to find a variable name for you!" />
+  <meta name="description" content="Search over projects from Github, Bitbucket, Google Code and more to find real-world usage variable names" />
   <meta name="keywords" content="variable naming,programming naming,programming variable dictionary">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="resources/css/bootstrap.min.css">
