updated button name

--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
 
     function renderSearchBtn(){
       var val = els.searchInput.val().trim();
-      els.searchBtn.html((val.length && val==els.lastInputVal)?'Next Group':'Search');
+      els.searchBtn.html((val.length && val==els.lastInputVal)?'More':'Search');
     }
 
     function renderTooltips(){
