added auto select text

--- a/index.html
+++ b/index.html
@@ -387,6 +387,9 @@
           return false;
         }
       });
+      els.searchResultBd.on('mouseenter touchstart','a',function () {
+        $(this).select();
+      });
     }
     function init(){
       bindEvent();
