added save last lang

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
       height: 320px;
       overflow-y: scroll;
       -webkit-overflow-scrolling: touch;
+      -webkit-transform: translate3d(0,0,0);
     }
     .search-form .help{
       display: none;
