--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Codelf</title>
   <meta name="description" content="Search over projects from Github, Bitbucket, Google Code and more to find real-world usage variable names" />
-  <meta name="keywords" content="variable naming,programming naming,programming variable dictionary,naming convention,变量命名,函数命名,方法命名">
+  <meta name="keywords" content="variable naming,programming naming,programming variable dictionary,naming convention,变量命名,函数命名,方法命名,变量命名神器">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="resources/css/bootstrap.min.css">
   <style>
